adding python 3.9 testing

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 # to 3.7 since typing is still a bit fluid accross versions.
 #
 [tox]
-envlist = {py35,py36,py37,py38}-{test,nnvg,doctest,rstdoctest},noyaml,lint,mypy,report,docs
+envlist = {py35,py36,py37,py38,py39}-{test,nnvg,doctest,rstdoctest},noyaml,lint,mypy,report,docs
 
 
 [base]
