A lot of stuff in this one:
1. Fixed support generator to properly use specified file and line
   post-processors.
2. General progress on the variable length array.
3. Added "no-cov" to cmake build so it doesn't get in the way during
   development. This was a constant problem on OSX.

Still left is to get all the noexcept guarentees to be correct and to
figure out how to verify them.

--- a/verification/CMakeLists.txt
+++ b/verification/CMakeLists.txt
@@ -66,6 +66,16 @@ else()
     message(FATAL_ERROR "Unknown or no verification language (${NUNAVUT_VERIFICATION_LANG}). Try cmake -DNUNAVUT_VERIFICATION_LANG:string=[cpp|c]")
 endif()
 
+if(DEFINED ENV{NUNAVUT_FLAGSET})
+    set(NUNAVUT_FLAGSET "$ENV{NUNAVUT_FLAGSET}")
+    message(STATUS "Using ${NUNAVUT_FLAGSET} from environment for NUNAVUT_FLAGSET")
+elseif (DEFINED NUNAVUT_FLAGSET)
+     message(STATUS "Using override NUNAVUT_FLAGSET = ${NUNAVUT_FLAGSET}")
+else()
+    set(NUNAVUT_FLAGSET "${CMAKE_SOURCE_DIR}/cmake/compiler_flag_sets/native_w_cov.cmake")
+    message(STATUS "Setting (default) NUNAVUT_FLAGSET = ${NUNAVUT_FLAGSET}")
+endif()
+
 #
 # Tell cmake where to find our custom scripts.
 #
@@ -203,7 +213,7 @@ add_dependencies(dsdl-test nunavut-support)
 #
 # Load all our compile flag sets into the appropriate places.
 #
-apply_flag_set("${CMAKE_SOURCE_DIR}/cmake/compiler_flag_sets/native.cmake")
+apply_flag_set("${NUNAVUT_FLAGSET}")
 
 
 # +---------------------------------------------------------------------------+
