fixing git submodules (I think)

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/unity"]
 	path = submodules/unity
 	url = https://github.com/ThrowTheSwitch/Unity.git
+[submodule "submodules/o1heap"]
+	path = submodules/o1heap
+	url = https://github.com/pavel-kirienko/o1heap.git
