parallelizing python builds

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,8 +1,8 @@
 steps:
   - label: ':python::hammer: tox build, test, and report'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: toxic-docker-build
-    command: "tox"
+    command: ".buildkite/verify_py_38_39.sh"
     artifact_paths:
       - ".tox/report/tmp/*"
       - ".tox/mypy/tmp/*"
@@ -22,8 +22,23 @@ steps:
     agents:
       queue: 'default'
     timeout_in_minutes: 40
+  - label: ':python::hammer: python 35 - 37'
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    id: toxic-docker-build-legacy
+    command: ".buildkite/verify_py_35_37.sh"
+    plugins:
+      - docker#v3.3.0:
+          workdir: /repo
+          image: "uavcan/toxic:py35-py39-sq"
+          propagate-environment: true
+          environment:
+            - "BUILDKITE"
+            - "BUILDKITE_BUILD_NUMBER"
+    agents:
+      queue: 'default'
+    timeout_in_minutes: 40
   - label: ':linux::hammer: verification build, c, gcc, amd64'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: c-gcc-docker-verify-amd64
     command: ".buildkite/verify_c_amd64_gcc.sh"
     artifact_paths:
@@ -39,7 +54,7 @@ steps:
     agents:
       queue: 'default'
   - label: ':linux::hammer: verification build, c, gcc, x86'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: c-gcc-docker-verify-x86
     command: ".buildkite/verify_c_x86_gcc.sh"
     artifact_paths:
@@ -55,7 +70,7 @@ steps:
     agents:
       queue: 'default'
   - label: ':cpp::hammer: verification build, cpp, gcc, amd64'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: cpp-gcc-docker-verify-amd64
     command: ".buildkite/verify_cpp_amd64_gcc.sh"
     artifact_paths:
@@ -71,7 +86,7 @@ steps:
     agents:
       queue: 'default'
   - label: ':cpp::hammer: verification build, cpp, gcc, x86'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: cpp-gcc-docker-verify-x86
     command: ".buildkite/verify_cpp_x86_gcc.sh"
     artifact_paths:
@@ -87,7 +102,7 @@ steps:
     agents:
       queue: 'default'
   - label: ':linux::hammer: verification build, c, clang, amd64'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: c-clang-docker-verify-amd64
     command: ".buildkite/verify_c_amd64_clang.sh"
     artifact_paths:
@@ -103,7 +118,7 @@ steps:
     agents:
       queue: 'default'
   - label: ':linux::hammer: verification build, c, clang, x86'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: c-clang-docker-verify-x86
     command: ".buildkite/verify_c_x86_clang.sh"
     artifact_paths:
@@ -119,7 +134,7 @@ steps:
     agents:
       queue: 'default'
   - label: ':cpp::hammer: verification build, cpp, clang, amd64'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: cpp-clang-docker-verify-amd64
     command: ".buildkite/verify_cpp_amd64_clang.sh"
     artifact_paths:
@@ -135,7 +150,7 @@ steps:
     agents:
       queue: 'default'
   - label: ':cpp::hammer: verification build, cpp, clang, x86'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: cpp-clang-docker-verify-x86
     command: ".buildkite/verify_cpp_x86_clang.sh"
     artifact_paths:
@@ -152,7 +167,7 @@ steps:
       queue: 'default'
   - wait
   - label: ':python::amazon-s3::sonarqube: release'
-    if: build.branch != "master"
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
     id: toxic-docker-release
     command: "./.buildkite/release.sh"
     concurrency_group: nunavut/release
