--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,8 +1,14 @@
 steps:
   - label: ':python::hammer: tox build, test, and report'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: toxic-docker-build
-    command: ".buildkite/verify_py_38_39.sh"
+    commands:
+      - "tox -e lint,mypy,docs"
+      - "tox -e py38-nnvg"
+      - "tox -e py39-test,py39-nnvg,py39-doctest,py39-rstdoctest"
+      - "tox -e noyaml"
+      - "tox -e report"
+    parallelism: 2
     artifact_paths:
       - ".tox/report/tmp/*"
       - ".tox/mypy/tmp/*"
@@ -23,9 +29,13 @@ steps:
       queue: 'default'
     timeout_in_minutes: 40
   - label: ':python::hammer: python 35 - 37'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: toxic-docker-build-legacy
-    command: ".buildkite/verify_py_35_37.sh"
+    commands:
+      - "tox -e py35-test,py35-nnvg"
+      - "tox -e py36-nnvg"
+      - "tox -e py37-nnvg"
+    parallelism: 2
     plugins:
       - docker#v3.3.0:
           workdir: /repo
@@ -38,9 +48,16 @@ steps:
       queue: 'default'
     timeout_in_minutes: 40
   - label: ':linux::hammer: verification build, c, gcc, amd64'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: c-gcc-docker-verify-amd64
-    command: ".buildkite/verify_c_amd64_gcc.sh"
+    commands:
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native64.ini --build-type Debug"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native64.ini --build-type Release"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native64.ini --build-type MinSizeRel  --disable-asserts"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native64.ini --build-type Debug       --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native64.ini --build-type Release     --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native64.ini --build-type MinSizeRel  --enable-ovr-var-array"
+    parallelism: 3
     artifact_paths:
       - "verification/build_*/coverage_all.zip"
     plugins:
@@ -54,41 +71,16 @@ steps:
     agents:
       queue: 'default'
   - label: ':linux::hammer: verification build, c, gcc, x86'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: c-gcc-docker-verify-x86
-    command: ".buildkite/verify_c_x86_gcc.sh"
-    artifact_paths:
-      - "verification/build_*/coverage_all.zip"
-    plugins:
-      - docker#v3.3.0:
-          workdir: /repo
-          image: "uavcan/c_cpp:ubuntu-18.04"
-          propagate-environment: true
-          environment:
-            - "BUILDKITE"
-            - "BUILDKITE_BUILD_NUMBER"
-    agents:
-      queue: 'default'
-  - label: ':cpp::hammer: verification build, cpp, gcc, amd64'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
-    id: cpp-gcc-docker-verify-amd64
-    command: ".buildkite/verify_cpp_amd64_gcc.sh"
-    artifact_paths:
-      - "verification/build_*/coverage_all.zip"
-    plugins:
-      - docker#v3.3.0:
-          workdir: /repo
-          image: "uavcan/c_cpp:ubuntu-18.04"
-          propagate-environment: true
-          environment:
-            - "BUILDKITE"
-            - "BUILDKITE_BUILD_NUMBER"
-    agents:
-      queue: 'default'
-  - label: ':cpp::hammer: verification build, cpp, gcc, x86'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
-    id: cpp-gcc-docker-verify-x86
-    command: ".buildkite/verify_cpp_x86_gcc.sh"
+    commands:
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native32.ini --build-type Debug"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native32.ini --build-type Release"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native32.ini --build-type MinSizeRel  --disable-asserts"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native32.ini --build-type Debug       --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native32.ini --build-type Release     --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_gcc_native32.ini --build-type MinSizeRel  --enable-ovr-var-array"
+    parallelism: 3
     artifact_paths:
       - "verification/build_*/coverage_all.zip"
     plugins:
@@ -102,9 +94,16 @@ steps:
     agents:
       queue: 'default'
   - label: ':linux::hammer: verification build, c, clang, amd64'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: c-clang-docker-verify-amd64
-    command: ".buildkite/verify_c_amd64_clang.sh"
+    commands:
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native64.ini --build-type Debug"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native64.ini --build-type Release"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native64.ini --build-type MinSizeRel  --disable-asserts"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native64.ini --build-type Debug       --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native64.ini --build-type Release     --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native64.ini --build-type MinSizeRel  --enable-ovr-var-array"
+    parallelism: 3
     artifact_paths:
       - "verification/build_*/coverage_all.zip"
     plugins:
@@ -118,9 +117,62 @@ steps:
     agents:
       queue: 'default'
   - label: ':linux::hammer: verification build, c, clang, x86'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: c-clang-docker-verify-x86
-    command: ".buildkite/verify_c_x86_clang.sh"
+    commands:
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native32.ini --build-type Debug"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native32.ini --build-type Release"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native32.ini --build-type MinSizeRel  --disable-asserts"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native32.ini --build-type Debug       --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native32.ini --build-type Release     --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_c_clang_native32.ini --build-type MinSizeRel  --enable-ovr-var-array"
+    parallelism: 3
+    artifact_paths:
+      - "verification/build_*/coverage_all.zip"
+    plugins:
+      - docker#v3.3.0:
+          workdir: /repo
+          image: "uavcan/c_cpp:ubuntu-18.04"
+          propagate-environment: true
+          environment:
+            - "BUILDKITE"
+            - "BUILDKITE_BUILD_NUMBER"
+    agents:
+      queue: 'default'
+  - label: ':cpp::hammer: verification build, cpp, gcc, amd64'
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
+    id: cpp-gcc-docker-verify-amd64
+    commands:
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native64.ini --build-type Debug"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native64.ini --build-type Release"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native64.ini --build-type MinSizeRel  --disable-asserts"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native64.ini --build-type Debug       --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native64.ini --build-type Release     --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native64.ini --build-type MinSizeRel  --enable-ovr-var-array"
+    parallelism: 3
+    artifact_paths:
+      - "verification/build_*/coverage_all.zip"
+    plugins:
+      - docker#v3.3.0:
+          workdir: /repo
+          image: "uavcan/c_cpp:ubuntu-18.04"
+          propagate-environment: true
+          environment:
+            - "BUILDKITE"
+            - "BUILDKITE_BUILD_NUMBER"
+    agents:
+      queue: 'default'
+  - label: ':cpp::hammer: verification build, cpp, gcc, x86'
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
+    id: cpp-gcc-docker-verify-x86
+    commands:
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native32.ini --build-type Debug"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native32.ini --build-type Release"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native32.ini --build-type MinSizeRel  --disable-asserts"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native32.ini --build-type Debug       --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native32.ini --build-type Release     --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_gcc_native32.ini --build-type MinSizeRel  --enable-ovr-var-array"
+    parallelism: 3
     artifact_paths:
       - "verification/build_*/coverage_all.zip"
     plugins:
@@ -134,9 +186,16 @@ steps:
     agents:
       queue: 'default'
   - label: ':cpp::hammer: verification build, cpp, clang, amd64'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: cpp-clang-docker-verify-amd64
-    command: ".buildkite/verify_cpp_amd64_clang.sh"
+    commands:
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native64.ini --build-type Debug"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native64.ini --build-type Release"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native64.ini --build-type MinSizeRel  --disable-asserts"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native64.ini --build-type Debug       --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native64.ini --build-type Release     --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native64.ini --build-type MinSizeRel  --enable-ovr-var-array"
+    parallelism: 3
     artifact_paths:
       - "verification/build_*/coverage_all.zip"
     plugins:
@@ -150,9 +209,16 @@ steps:
     agents:
       queue: 'default'
   - label: ':cpp::hammer: verification build, cpp, clang, x86'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: cpp-clang-docker-verify-x86
-    command: ".buildkite/verify_cpp_x86_clang.sh"
+    commands:
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native32.ini --build-type Debug"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native32.ini --build-type Release"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native32.ini --build-type MinSizeRel  --disable-asserts"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native32.ini --build-type Debug       --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native32.ini --build-type Release     --enable-ovr-var-array"
+      - ".buildkite/verify.py --overrides .buildkite/verify_cpp_clang_native32.ini --build-type MinSizeRel  --enable-ovr-var-array"
+    parallelism: 3
     artifact_paths:
       - "verification/build_*/coverage_all.zip"
     plugins:
@@ -167,7 +233,7 @@ steps:
       queue: 'default'
   - wait
   - label: ':python::amazon-s3::sonarqube: release'
-    if: build.branch == "main" && pipeline.slug == "nunavut-release"in
+    if: build.branch == "main" && pipeline.slug == "nunavut-release"
     id: toxic-docker-release
     command: "./.buildkite/release.sh"
     concurrency_group: nunavut/release
